
2.4.0:
  - Unlink `source` from `target` on scale down by `ansible.cloudify_ansible.tasks.ansible_remove_host`.
  - Add `resumable` support to operations
  - Support `ansible_ssh_pass` in `agent_config`.
  - Fix support for `cfy local`.

2.5.0:
  - Update Ansible Version to use 2.8.x
  - Update Ansible examples

2.6.0:
  - Add support for new node type called `cloudify.nodes.ansible.Playbook`
  - Add support for new relationship `cloudify.ansible.relationships.run_on_host` which runs on `establish` operation
  - Enhance handling string value for ansible inventory `sources`
  - Update Ansible SDK execution to use cloudify script runner for running command
  - Update handling logging for running Ansible command

2.7.0:
  - Support agent_host "local" execution.

2.7.1:
  - Support changing the default Ansible configuration executable path.
  - Better handle logging based on customer choice of sensitive data.
  - Support refresh Ansible playbook-with-different-name from another blueprint using deployment update.
  - Pin Ansible version to latest stable.

2.8.0:
  - Support playbook from URL and added reload playbook workflow.

2.8.1:
  - Use shared resource downloader from cloudify-utilities-sdk.
  - Fix upload blueprint to 4.5.5

2.8.2:
  - Handle private key logging.

2.9.0:
  - Add additional parameters(can be also passed by additional_args in old plugin versions): start_at_task, timeout and etc.

2.9.1:
  - Fix Bug introduced by plugin yaml changes in 2.9.1

2.9.2:
  - Update wagon builder to py2py3 wagon and add rhel wagon builder.
  - Added 5.1.0 manager integration tests.

2.9.3:
  - Support global visibility blueprints.
  - Support existing inventory file.

2.9.4:
  - fix build issue

2.10.0:
  - Controller run each playbook in different venv.

2.10.1:
  - Fix bug of multi tenancy, if working offline use the plugin venv ansible-playbook executable and can't use "extra_packages".
2.11.0:
  - RD-469: Send JSON event to event log during execution.