@@ -90,3 +90,4 @@
   - Fix bug of multi tenancy, if working offline use the plugin venv ansible-playbook executable and can't use "extra_packages".
 2.11.0:
   - RD-469: Send JSON event to event log during execution.
+  - RD-1610: Step through Ansible Tags.
